Remove chars from composer.json

--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,10 @@
         }
     },
     "extra": {
-+        "laravel": {
-+            "providers": [
-+                "EelcoLuurtsema\\LaravelPackageCreate\\ServiceProvider"
-+            ]
+        "laravel": {
+            "providers": [
+                "EelcoLuurtsema\\LaravelPackageCreate\\ServiceProvider"
+            ]
          }
      }
 }
