--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=7.0.0",
-        "laravel": ">=5.4.0"
+        "laravel/framework": ">=5.1.0"
     },
     "autoload": {
         "psr-4": {
